litellm/litellm-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: litellm
spec:
  selector:
    app: litellm
  ports:
  - port: 4000
    targetPort: 4000
